2011-09-10	Juergen Beisert <jbe@pengutronix.de>

	* Platform:
		- back to development
	* Kernel 3.0
	        - back to development

2011-09-09	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Freeze to PTXdist-2011.09.0
	* All kernels: Release ptx-2011.09.0
	* Barebox 2011.05.0: Release ptx-2011.09.0
	* Kernel 3.0: Enable more options to make it run with other root
		      filesystems as well
	* Platform: Release September 2011 (2011.09.0)

2011-09-07	amit shah <techlist.amit@gmail.com>

	* Kernel 3.0:
	        - add the N43i display unit to the list of known devices

2011-09-03	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- let the kernel handle the physical display size
		- do not use display size set in userland

2011-08-30	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
	       - keep in sync with stable release .4

2011-08-18	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
	       - keep in sync with stable release .3

2011-08-16	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
	       - keep in sync with stable release .2

2011-08-15	Juergen Beisert <jbe@pengutronix.de>

	* Platform: Release August 2011 (2011.08.0)

2011-08-13	Juergen Beisert <jbe@pengutronix.de>

	* Qt setup: Add more display info for various displays
	* Kernel 3.0.1: Release ptx-2011.08.0
	* Barebox 2011.05.0: Release ptx-2011.08.0
	* Platform: Freeze to PTXdist-2011.08.0

2011-08-06	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0.0:
	       - keep in sync with stable release .1

2011-08-04	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 2.6.39:
		- Keep in sync with stable release 2.6.39.4
		- Release ptx-2011.08.0

2011-07-24	Laurent Verstraeten <laurentv@tritechbelgium.com>

	* Barebox: Add support to boot from SD/MMC card

2011-07-24	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- make the DM9000 driver more perfect

2011-07-22	Juergen Beisert <jbe@pengutronix.de>

	* Kernel 3.0:
		- Use most recent Linux release