@@ -8,8 +8,8 @@ Signed-off-by: Juergen Beisert <jbe@pengutronix.de>
 
 ---
  arch/arm/mach-s3c2410/include/mach/fb.h |    2 ++
- drivers/video/s3c2410fb.c               |    2 ++
- 2 files changed, 4 insertions(+)
+ drivers/video/s3c2410fb.c               |    4 ++--
+ 2 files changed, 4 insertions(+), 2 deletions(-)
 
 Index: linux-3.0/arch/arm/mach-s3c2410/include/mach/fb.h
 ===================================================================
@@ -28,12 +28,14 @@ Index: linux-3.0/drivers/video/s3c2410fb.c
 ===================================================================
 --- linux-3.0.orig/drivers/video/s3c2410fb.c
 +++ linux-3.0/drivers/video/s3c2410fb.c
-@@ -904,6 +904,8 @@ static int __devinit s3c24xxfb_probe(str
- 	fbinfo->var.activate	    = FB_ACTIVATE_NOW;
- 	fbinfo->var.accel_flags     = 0;
- 	fbinfo->var.vmode	    = FB_VMODE_NONINTERLACED;
-+	fbinfo->var.width	    = display->phys_width;
-+	fbinfo->var.height	    = display->phys_height;
+@@ -151,8 +151,8 @@ static int s3c2410fb_check_var(struct fb
+ 	/* it is always the size as the display */
+ 	var->xres_virtual = display->xres;
+ 	var->yres_virtual = display->yres;
+-	var->height = display->height;
+-	var->width = display->width;
++	var->height = display->phys_height;
++	var->width = display->phys_width;
  
- 	fbinfo->fbops		    = &s3c2410fb_ops;
- 	fbinfo->flags		    = FBINFO_FLAG_DEFAULT;
+ 	/* copy lcd settings */
+ 	var->pixclock = display->pixclock;
