@@ -4,6 +4,7 @@
 		- back to development
 	* Kernel 3.0
 	        - back to development
+	        - (aarghh) really handle display's physical size in kernel
 
 2011-09-09	Juergen Beisert <jbe@pengutronix.de>
 
